--- a/Jirono/css/style.css
+++ b/Jirono/css/style.css
@@ -3,18 +3,38 @@
     padding: 0px;
     box-sizing: border-box;
 }
-.navbar{
-    margin-top: 25px !important;
+body{
     font-family: 'Nunito', sans-serif;
 }
-.nav-logo .logo{
+.loader-image{
+    position: fixed;
+      left: 0px;
+      top: 0px;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      background: url('../images/DualBall-1s-430px.gif') center no-repeat white;
+      background-size: 100px;
+      text-align: center;
+}
+.nav-menu{
+    /* margin-top: 25px !important; */
+    /* font-family: 'Nunito', sans-serif; */
+    background-color: transparent;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    position: absolute;
+    transition: all 0.5s;
+}
+.nav-menu .logo{
     margin-top: 3px;
     margin-right: 80px;
 }
 /* .nav-menu li{
  padding-right: 0px !important;
 } */
-.nav-menu li a{
+.nav-list li a{
     text-decoration: none;
     color:#6F8BA4 !important; 
     margin-top: 5px;
@@ -52,18 +72,21 @@
     background-color: #1A153A;
     color: white !important;
 }
+#welcome{
+    background: url('../images/header-bg.svg')top left no-repeat;
+    margin-top: 100px;
+    padding-bottom: 100px;
+}
 #welcome .caption h1{
     padding-top: 100px;
-    font-family: 'Nunito', sans-serif;
+    /* font-family: 'Nunito', sans-serif; */
     font-size: 28px;
     line-height: 46px;
     letter-spacing: 0.93px;
     margin-bottom: 20px;
     color: #1A153A !important;
 }
-#welcome{
-    margin-top: 100px;
-}
+
 #welcome .caption p{
     font-weight: 400;
     font-size: 16px;
@@ -80,7 +103,7 @@
     cursor: pointer;
 }  
 
-.first{
+/* .first{
     width: 49%;
     height: 332px;
     float: left;
@@ -148,16 +171,9 @@
     height: 263px;
     border-radius: 10px;
     object-fit: cover;
-  }
-  #welcome .pic-container .image-text{
-   /* position: absolute;
-   left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    font-size: 20px;
-    padding: 10px; */
+  } */
+  /* #welcome .pic-container .image-text{
+  
     position: absolute;
     z-index: 3;
     width: 99%;
@@ -172,7 +188,7 @@
 }
 #welcome .pic-container .image-text .inner{
     padding-left: 10px;
-}
+} */
 
 #welcome .card{
     position: relative;
@@ -186,10 +202,10 @@
 #welcome .card:hover .card-body{
     color: white;
 }
-#welcome .card:hover .welcome-icon i{
+#welcome .card:hover .features-icon i{
     color: #1A153A;
 }
-#welcome .card .welcome-icon{
+#welcome .card .features-icon{
     background-color: #F7F6FF;
     border-radius: 100%;
     position: absolute;
@@ -199,18 +215,67 @@
 }
 #welcome .card .card-body{
     padding-top: 70px;
-    font-family: 'Nunito', sans-serif;
+    /* font-family: 'Nunito', sans-serif; */
     text-align: center;
     color: #6F8BA4;;
 }
 #welcome .card .card-body h5{
     padding-top: 20px;
 }
+#features{
+    background-color: #F7FAFD;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+#features .features-caption h2{
+    color: #3B566E;
+}
+#features .features-caption p{
+    color: #6F8BA4;
+    padding-top: 20px;
+}
+#features a{
+    text-decoration: none !important;
+    width: 100%;
+    margin-top: 20px;
+    height: 40px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow:0 2px 48px 0 rgb(0 0 0 / 8%);
+    color:#3B566E;
+}
+#features .features-image{
+    padding-top: 40px;
+}
+#design{
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+#design .design-caption h2{
+    color: #3B566E;
+}
+#design .design-caption p{
+    color: #6F8BA4;
+    padding-top: 20px;
+}
+#design a{
+    text-decoration: none !important;
+    width: 100%;
+    margin-top: 20px;
+    height: 40px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow:0 2px 48px 0 rgb(0 0 0 / 8%);
+    color:#3B566E;
+}
+#design .design-image{
+    padding-top: 40px;
+}
 footer{
     background: #1A153A;
     padding-top: 70px;
     color: white;
-    font-family: 'Nunito', sans-serif;
+    /* font-family: 'Nunito', sans-serif; */
     font-size: 14px;
     font-weight: 600;
 }
