--- a/Jirono/css/style.css
+++ b/Jirono/css/style.css
@@ -1,8 +1,8 @@
-*{
+/* *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-}
+} */
 body{
     font-family: 'Nunito', sans-serif;
 }
@@ -11,6 +11,7 @@ body{
     background: #1A153A;
     
 }
+
 .loader-image{
     position: fixed;
       left: 0px;
@@ -22,21 +23,97 @@ body{
       background-size: 100px;
       text-align: center;
 }
-.parallax-home{
+
+#ParallaxCounter {
+    border: 0;
+    margin: 0;
+    padding-bottom: 0;
+    background-image: url(../images/parallax.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    text-align: center;
+    margin-top: 70px;
+}
+
+#ParallaxCounter .parallaxContent {
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #1a153ad1;
+}
+
+#ParallaxCounter .parallaxContent .text {
+    text-align: center;
+    margin-bottom: 80px;
+    margin-top: 80px;
+    position: relative;
+    bottom: 0;
+    transition: bottom .3s;
+}
+
+#ParallaxCounter .parallaxContent .text:hover {
+    /* transform: translateY(-20px); */
+    bottom: 20px;
+    transition: all .3s;
+}
+
+#ParallaxCounter .parallaxContent .text p.display-4.number {
+    text-align: center;
+    color: white;
+    width: 150px;
+    font-size: 50px;
+    font-weight: 500;
+    /* padding-top: 80px; */
+    border-bottom: 1px dashed white;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    margin-bottom: 10px;
+}
+
+#ParallaxCounter .parallaxContent .text p.line {
+    color: white;
+    margin-bottom: 5px;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+/* #parallax-stuff {
     background: url('../images/parallax.jpg') no-repeat fixed;
     background-size: cover;
     height: 300px;
-    position: relative;
+    
    
-}
-.parallax-home .cover-image{
+} */
+
+/* @media only screen and (max-width: 768px){
+    #parallax-stuff {
+        height: 432px;
+    }
+    .parallax-home{
+        height: 432px;
+    }
+} */
+
+/* .parallax-home{
+    position: relative;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #1a153ad1;
+    height: 300px;
+    
+} */
+/* .parallax-home .cover-image{
     background-color:#1A153A ;
     opacity: 0.8;
     height: 100%;
     background-size: cover;
     
-}
-.parallax-home #countTo{
+} */
+/* .parallax-home #countTo{
     color: white;
     padding-top: 50px;
    position: absolute;
@@ -63,7 +140,7 @@ body{
     border-top: 1px dashed white;
     top: 75px;
     left: 0px;
-}
+} */
 .parallax-home2{
     background: url('../images/parallax.jpg') no-repeat fixed;
     background-size: cover;
@@ -100,6 +177,12 @@ body{
     top: 0;
     left: 0;
   
+}
+@media only screen and (max-width:375px){
+    .parallax-home2 .parallax-info{
+        top: 0;
+        left: 0;
+    }
 }
 .parallax-about .about-caption{
     color: white;
@@ -167,6 +250,72 @@ body{
     position: absolute;
     transition: all 0.5s;
     height: 100px ;
+   
+}
+.nav-menu .nav-list .nav-item a{
+    font-weight: 400;
+}
+.nav-menu .dropdown .dropdown-menu{
+    display: block;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-5%);
+
+}
+ 
+.nav-menu .dropdown:hover .dropdown-menu{
+    /* display: block; */
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+    transition: all 0.3s;
+    
+    
+}
+.nav-menu .dropdown .dropp-item:hover .dropdown-menu{
+    display: block;
+}
+.nav-menu .dropdown-menu{
+    border:none;
+    padding: 0;
+    margin-top: 0;
+}
+.nav-menu .dropdown-menu a {
+   margin: 0;
+   border-bottom:1px solid #f5f5f5;
+   font-weight: 400;
+   transition: padding-left 0.3s;
+   line-height: 40px;
+}
+.nav-menu .dropdown-menu a:last-child{
+    border-bottom: none;
+}
+
+.nav-menu .dropdown-menu a:hover{
+    border-left: 4px solid #1A153A;
+    padding-left: 30px;
+    transition: 0.3s;
+}
+.nav-menu-others .dropdown-menu{
+    border:none;
+    padding: 0;
+}
+.nav-menu-others .dropdown-menu a {
+   margin: 0;
+   border-bottom:1px solid #f5f5f5;
+   font-weight: 400;
+   transition: padding-left 0.3s;
+   line-height: 40px;
+   
+}
+.nav-menu-others .dropdown-menu a:last-child{
+    border-bottom: none;
+}
+
+.nav-menu-others .dropdown-menu a:hover{
+    border-left: 4px solid #1A153A;
+    padding-left: 30px;
+    transition: 0.3s;
 }
 .nav-menu-others{
     background-color: white;
@@ -177,6 +326,9 @@ body{
     transition: all 0.5s;
     height: 80px ;
     transition: all 0.5s;
+}
+.nav-menu-others .nav-list .nav-item a{
+    font-weight: 400;
 }
 .nav-menu .logo{
     margin-top: 3px;
@@ -235,6 +387,7 @@ body{
 }
 #welcome .caption{
     padding-bottom: 130px;
+    padding-top: 14px;
 }
 #welcome .caption h1{
     padding-top: 100px;
@@ -264,6 +417,7 @@ body{
 }
 #welcome .welcome-grid{
     display: grid;
+    margin-left: 100px;
     grid-template-areas:
     'item1 item2'
     'item1 item4'
@@ -293,9 +447,10 @@ body{
 #welcome .welcome-grid .image{
     height: 100%;
     position: relative;
+    width: 265px;
 }
 #welcome .welcome-grid .image img{
-    width: 265px;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     transition: 0.5s;
@@ -321,7 +476,10 @@ body{
     left: 35%;
     top: 30%;  
 }
-/* #welcome .welcome-grid .image .content{
+#welcome .welcome-grid .item4 .image{
+    position: relative;
+}
+#welcome .welcome-grid  .item4 .image .content{
     position: absolute;
     top: 0;
     left: 0;
@@ -330,10 +488,18 @@ body{
     border-radius: 5px;
     opacity: 0.8;
     color: white;
-    padding: 100px 15px;
     line-height: 30px;
     font-size: 20px;
-} */
+}
+#welcome .welcome-grid  .item4 .image .content{
+    padding-top: 60px;
+    padding-left: 10px;
+    padding-right: 10px;
+    z-index: 999;
+}
+#welcome .welcome-grid  .item4 .image .content:hover +img{
+    transform: scale(1.1)
+}
 .same .card{
     position: relative;
     height: 250px; 
@@ -378,7 +544,23 @@ body{
     padding-top: 20px;
 }
  /* Welcome area end */
+@media only screen and (max-width:375px){
+    #welcome .caption{
+        text-align: center;
+    }
 
+    .same .card{
+      margin-bottom: 30px;
+    }
+   #welcome .welcome-grid {
+        margin-left: 0px;
+    }
+    #welcome .item4 .content p {
+        font-size: 13px;
+        text-align: left;
+        padding-right: 14px;
+    }
+}
   /* Features area start */
 #features{
     background-color: #F7FAFD;
@@ -396,10 +578,58 @@ body{
     width: 100%;
     margin-top: 20px;
     height: 40px;
+    text-align: left;
+    border: none;
     background-color: white;
     border-radius: 5px;
+    overflow: hidden;
     box-shadow:0 2px 48px 0 rgb(0 0 0 / 8%);
     color:#3B566E;
+}
+#features a.designList::after{
+    content: "";
+    height: 10rem;
+    width: 10rem;
+    background-color: #CCDCEA;
+    z-index: -1;
+    display: block;
+    transform: rotate(55deg) translateX(-66px) translateY(68px)
+}
+#features a.designList.active::after{
+    content: "";
+    height: 10rem;
+    width: 10rem;
+    background-color: #1A153A;
+    z-index: -1;
+    display: block;
+    transform: rotate(55deg) translateX(-66px) translateY(68px)
+}
+#features a.designList.active span{
+    padding-left: 35px;
+}
+#features a.designList.active2::after{
+    content: "";
+    height: 10rem;
+    width: 10rem;
+    padding-left: 30px;
+    background-color: #1A153A;
+    z-index: -1;
+    display: block;
+    transform: rotate(55deg) translateX(-66px) translateY(68px)
+}
+#features a i{
+    color: white;
+    z-index: 1;
+    position: relative;
+    padding-left: 3px;
+}
+#features a span{
+   padding-left: 30px;
+   transition: padding 0.3s;
+}
+#features a:hover span{
+    
+    transition: 0.3s;
 }
 #features .features-image{
     padding-top: 40px;
@@ -419,19 +649,67 @@ body{
 #design a{
     text-decoration: none !important;
     width: 100%;
+    text-align: left;
     margin-top: 20px;
     height: 40px;
+    border: none;
     background-color: white;
     border-radius: 5px;
     box-shadow:0 2px 48px 0 rgb(0 0 0 / 8%);
     color:#3B566E;
+    overflow: hidden;
+}
+#design a.designList::after{
+    content: "";
+    height: 10rem;
+    width: 10rem;
+    background-color: #CCDCEA;
+    z-index: -1;
+    display: block;
+    transform: rotate(55deg) translateX(-66px) translateY(68px)
+}
+#design a.designList.active::after{
+    content: "";
+    height: 10rem;
+    width: 10rem;
+    background-color: #1A153A;
+    z-index: -1;
+    display: block;
+    transform: rotate(55deg) translateX(-66px) translateY(68px)
+}
+#design a.designList.active span{
+    padding-left: 35px;
+}
+#design a.designList.active2::after{
+    content: "";
+    height: 10rem;
+    width: 10rem;
+    padding-left: 30px;
+    background-color: #1A153A;
+    z-index: -1;
+    display: block;
+    transform: rotate(55deg) translateX(-66px) translateY(68px)
+}
+#design a i{
+    color: white;
+    z-index: 1;
+    position: relative;
+    padding-left: 3px;
+}
+#design a span{
+   padding-left: 30px;
+   transition: padding 0.3s;
+}
+#design a:hover span{
+    
+    transition: 0.3s;
 }
 #design .design-image{
     padding-top: 40px;
 }
 #our-team{
     padding-bottom: 80px;
-    padding-top: 50px;
+    padding-top: 150px;
 }
 #our-team .team-header{
     text-align: center;
@@ -483,6 +761,7 @@ body{
 #our-team .team-item .team-image .image{
        position: absolute;
        bottom: -40px;
+       left: 50px;
 }
 #our-team .team-item .team-image .image img{
     padding: 6px;
@@ -491,6 +770,14 @@ body{
     background-color: white;
     box-shadow: 0 2px 48px 0 rgb(0 0 0 / 8%);
 }
+@media only screen and (max-width:768px){
+    #our-team .team-item{
+        margin-bottom: 60px;
+    }
+    #our-team .team-item .team-image .image{
+        bottom: 20px;
+    }
+} 
 #pricing-plans .animated__delay-5{
     animation-delay: .15s;
 }
@@ -568,6 +855,7 @@ body{
 
 #pricing-plans .pricing-item .item-body #pricing-list{
     text-align: center;
+    list-style-type: none;
 }
 #pricing-plans .pricing-item .item-body #pricing-list .active{
     margin-bottom: 12px;
@@ -648,10 +936,14 @@ footer{
 }
 footer ul{
     list-style-type: none;
+    padding-left: 0;
 }
 footer ul li{
     padding-top: 10px;
     font-size: 400;   
+}
+footer .unset{
+    width: unset;
 }
 footer ul li a{
     text-decoration: none;
@@ -789,10 +1081,10 @@ footer .socials li{
     border-radius: 7px;
     transition: transform 0.5s;
 }
-#toCloud .link .icon-holder img{
+#toCloud .link  .icon-image{
     position: absolute;
-    left: 30%;
-    top: 28%;
+    left: 17%;
+    top: 34%;
 }
 #toCloud .link .link-text{
     position: absolute;
